docs: api docs & package.json
