# server/docs/swagger-output.json
@@ -13,6 +13,10 @@
       "description": "Book API Endpoints"
     },
     {
+      "name": "Booklist",
+      "description": "Booklist API Endpoints"
+    },
+    {
       "name": "User",
       "description": "User API Endpoints"
     }
@@ -21,23 +25,6 @@
     "http"
   ],
   "paths": {
-    "/api/v1/book/all/fields": {
-      "get": {
-        "tags": [
-          "Book"
-        ],
-        "description": "Endpoint to get available fields of book",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/api/v1/book/": {
       "get": {
         "tags": [
@@ -77,7 +64,7 @@
         "tags": [
           "Book"
         ],
-        "description": "Endpoint to insert a book into database",
+        "description": "Endpoint to create a book",
         "parameters": [
           {
             "name": "body",
@@ -99,9 +86,6 @@
                 },
                 "title": {
                   "example": "any"
-                },
-                "book": {
-                  "example": "any"
                 }
               }
             }
@@ -113,6 +97,23 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/book/fields": {
+      "get": {
+        "tags": [
+          "Book"
+        ],
+        "description": "Endpoint to get available fields of book",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
@@ -138,6 +139,9 @@
           "200": {
             "description": "OK"
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -147,7 +151,7 @@
         "tags": [
           "Book"
         ],
-        "description": "Endpoint to delete a book from database by its id",
+        "description": "Endpoint to delete a book by its id",
         "parameters": [
           {
             "name": "bookId",
@@ -159,6 +163,245 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/book/{bookId}/review": {
+      "post": {
+        "tags": [
+          "Book"
+        ],
+        "description": "Endpoint to create a book review",
+        "parameters": [
+          {
+            "name": "bookId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "rank": {
+                  "example": "any"
+                },
+                "content": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/booklist/": {
+      "get": {
+        "tags": [
+          "Booklist"
+        ],
+        "description": "Endpoint to search booklists",
+        "parameters": [
+          {
+            "name": "keywords",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "labels",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Booklist"
+        ],
+        "description": "Endpoint to create a booklist",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "books": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "labels": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "public": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/booklist/fields": {
+      "get": {
+        "tags": [
+          "Booklist"
+        ],
+        "description": "Endpoint to get available fields of booklist",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/booklist/{booklistId}": {
+      "get": {
+        "tags": [
+          "Booklist"
+        ],
+        "description": "Endpoint to get specific booklist by its id",
+        "parameters": [
+          {
+            "name": "booklistId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Booklist"
+        ],
+        "description": "Endpoint to delete a booklist by its id",
+        "parameters": [
+          {
+            "name": "booklistId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/booklist/{booklistId}/review": {
+      "post": {
+        "tags": [
+          "Booklist"
+        ],
+        "description": "Endpoint to create a booklist review",
+        "parameters": [
+          {
+            "name": "booklistId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "rank": {
+                  "example": "any"
+                },
+                "content": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
@@ -186,6 +429,75 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/user/": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to post user info",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "avatar": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "hashedPass": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/user/{userId}": {
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to delete user info by its id",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
           },
           "500": {
             "description": "Internal Server Error"
